# lipcoding-competition

./: .gitignore  LICENSE  Makefile  PLAN.md  README.md  ghcp.md  hall-of-fame.md  mentor-mentee-app-requirements.md  mentor-mentee-app-user-stories.md  package.json  playwright.config.js  policy-penalties.md  policy-rules.md
.github/: custom_instructions.md
.github/ISSUE_TEMPLATE/: APP_SUBMISSION.yml
.github/workflows/: on-quest-submitted.yml
backend/: .env  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run_tests.py
backend/app/: database.py  main.py
backend/app/api/routes/: auth.py  matching.py  mentors.py  users.py
backend/app/core/: auth.py  config.py
backend/app/schemas/: __init__.py
backend/tests/: README.md  conftest.py  test_auth.py  test_auth_utils.py  test_database.py  test_integration.py  test_matching.py  test_mentors.py  test_users.py
docs/: README.md
frontend/: .gitignore  Makefile  README.md  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: Login.js  MatchingRequests.js  MentorList.js  Navbar.js  Profile.js  Signup.js
frontend/src/contexts/: AuthContext.js
frontend/src/utils/: api.js
tests/: README.md  api.spec.js  auth.spec.js  e2e-summary.spec.js  integration.spec.js  mentee.spec.js  mentor.spec.js  ui-ux.spec.js  user-list.spec.js
